--- a/index.html
+++ b/index.html
@@ -8,16 +8,13 @@
 <body>
     <script src="rockpaperscissors.js"></script>
 
-    Player Input:
-    
-    
-    <input type="button" value="Rock" onclick="getHumanChoice(this.value)">
-    <input type="button" value="Paper" onclick="getHumanChoice(this.value)">
-    <input type="button" value="Scissors" onclick="getHumanChoice(this.value)">
-
-    <!-- <button onclick="playGame()">Play Game</button> -->
-
     <h1 id="Player_Score">Player Score: 0</h1>
     <h1 id="Computer_Score">Computer Score: 0</h1>
+    <div class="during_game">
+        <input type="button" value="Rock" onclick="getHumanChoice(this.value)">
+        <input type="button" value="Paper" onclick="getHumanChoice(this.value)">
+        <input type="button" value="Scissors" onclick="getHumanChoice(this.value)">
+    </div>
+    <div class="winning_screen">wow someone won!</div>
 </body>
 </html>
